--- a/index.html
+++ b/index.html
@@ -90,30 +90,32 @@
     <h5>Conestoga products that we will be selling until inventory runs out.</h5>
     <div class="container">
         <div class="row">
-            
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row">
-                    <div class="one-half column">
-                        <img src="img/White Front Upper Center all caps.jpg" style="width: 150px;" />
-                    </div>
-                    <div class="one-half column">
-                        <img src="img/White Back.jpg" style="width: 150px;" />
+                    <div class="column">
+                        <img src="img/tumbler.png" style="height: 150px;" />
                     </div>
                 </div>
-                <h5 style="margin: 0;">White M</h5>
+                <h5 style="margin: 0;">Tumbler</h5>
                 <p style="font-size: large">$15</p>
             </div>
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row">
-                    <div class="one-half column">
-                        <img src="img/White Front Upper Center all caps.jpg" style="width: 150px;" />
-                    </div>
-                    <div class="one-half column">
-                        <img src="img/White Back.jpg" style="width: 150px;" />
+                    <div class="column">
+                        <img src="img/Lanyard.JPG" style="height: 150px;" />
                     </div>
                 </div>
-                <h5 style="margin: 0;">White XL</h5>
-                <p style="font-size: large">$15</p>
+                <h5 style="margin: 0;">Lanyard</h5>
+                <p style="font-size: large">$5</p>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <div class="row">
+                    <div class="column">
+                        <img src="img/stadium seat.png" style="height: 150px;" />
+                    </div>
+                </div>
+                <h5 style="margin: 0;">Stadium Seat</h5>
+                <p style="font-size: large">$30</p>
             </div>
         </div>
 
@@ -122,9 +124,9 @@
                 <center>
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                         <input type="hidden" name="cmd" value="_s-xclick">
-                        <input type="hidden" name="hosted_button_id" value="RQBBAV6394Q3Y">
+                        <input type="hidden" name="hosted_button_id" value="4FT6AGGRUBF8N">
                         <table>
-                            <tr><td><input type="hidden" name="on0" value="Email address">Email address</td></tr><tr><td><input type="text" name="os0" maxlength="200"></td></tr>
+                        <tr><td><input type="hidden" name="on0" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os0" maxlength="200"></td></tr>
                         </table>
                         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                         <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
@@ -136,9 +138,23 @@
                 <center>
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                         <input type="hidden" name="cmd" value="_s-xclick">
-                        <input type="hidden" name="hosted_button_id" value="V249DZLCPH9BA">
+                        <input type="hidden" name="hosted_button_id" value="WDSKGXDQ26G5S">
                         <table>
-                            <tr><td><input type="hidden" name="on0" value="Email address">Email address</td></tr><tr><td><input type="text" name="os0" maxlength="200"></td></tr>
+                        <tr><td><input type="hidden" name="on0" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os0" maxlength="200"></td></tr>
+                        </table>
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>
+                    Please enter your contact email address upon checkout.
+                </center>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="MWVLNTQPZFNBY">
+                        <table>
+                        <tr><td><input type="hidden" name="on0" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os0" maxlength="200"></td></tr>
                         </table>
                         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                         <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
@@ -149,6 +165,108 @@
         </div>
     </div>
 </div>
+
+<div class="section" style="padding-top: 3rem;">
+    <div class="container">
+        <div class="row">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <div class="row">
+                    <div class="column">
+                        <img src="img/Magnet (1).JPG" style="height: 150px;" />
+                    </div>
+                </div>
+                <h5 style="margin: 0;">Magnet</h5>
+                <p style="font-size: large">$5</p>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <div class="row">
+                    <div class="one-half column">
+                        <img src="img/black hat.jpg" style="height: 85px;" />
+                    </div>
+                    <div class="one-half column">
+                        <img src="img/white hat.jpg" style="height: 85px;" />
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="one-half column">
+                        <img src="img/grey hat.jpg" style="height: 85px;" />
+                    </div>
+                </div>
+                <h5 style="margin: 0;">Hats</h5>
+                <p style="font-size: large">$20</p>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <div class="row">
+                    <div class="column">
+                        <img src="img/2022 tee.jpg" style="height: 150px;" />
+                    </div>
+                </div>
+                <h5 style="margin: 0;">T-shirt</h5>
+                <p style="font-size: large">$10</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="EQ8TCQ9F65TFY">
+                        <table>
+                        <tr><td><input type="hidden" name="on0" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os0" maxlength="200"></td></tr>
+                        </table>
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>
+                    Please enter your contact email address upon checkout.
+                </center>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="HX5BP9ADS586S">
+                        <table>
+                        <tr><td><input type="hidden" name="on0" value="Color">Color</td></tr><tr><td><select name="os0">
+                            <option value="Black">Black $20.00 USD</option>
+                            <option value="White">White $20.00 USD</option>
+                            <option value="Grey">Grey $20.00 USD</option>
+                        </select> </td></tr>
+                        <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
+                        </table>
+                        <input type="hidden" name="currency_code" value="USD">
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>                      
+                    Please enter your contact email address upon checkout.
+                </center>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="5TNJZNCEG38A2">
+                        <table>
+                        <tr><td><input type="hidden" name="on0" value="Size">Size</td></tr><tr><td><select name="os0">
+                            <option value="S">S $10.00 USD</option>
+                            <option value="M">M $10.00 USD</option>
+                            <option value="L">L $10.00 USD</option>
+                            <option value="XL">XL $10.00 USD</option>
+                            <option value="XXL">XXL $10.00 USD</option>
+                        </select> </td></tr>
+                        <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
+                        </table>
+                        <input type="hidden" name="currency_code" value="USD">
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>
+                    Please enter your contact email address upon checkout.
+                </center>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <!-- The Modal -->
 <div id="myModal" class="modal">
