--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
     <br/>
     <img src="img/Grey C logo.jpg" style="height: 150px;" />
     <h4 class="hero-heading" style="color: white; margin-bottom: 0;">Conestoga Spiritwear</h4>
+    <p style="color: white; margin-top: 0;">All proceeds to benefit Class of 2022, Class of 2023 and T&E Care</p>
 </div>
 <div class="section" style="padding-top: 3rem;">
     <h5>Conestoga products that we will be selling until inventory runs out.</h5>
@@ -188,7 +189,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="one-half column">
+                    <div class="column">
                         <img src="img/grey hat.jpg" style="height: 85px;" />
                     </div>
                 </div>
@@ -277,7 +278,7 @@
 </div>
 
 <center>
-    <p>We will be doing a COVID-safe pickup.  Stay tuned for further instructions to your Paypal email.</p>
+    <p>We will be doing a COVID-safe pickup.  Stay tuned for further instructions to your order email.</p>
     <h4>All sales are final.  There are no exchanges or refunds.</h4>
     <p style="font-size: 10px;">This is not an official TESD website. It is organized by Conestoga parents</p>
 </center>
