--- a/index.html
+++ b/index.html
@@ -132,7 +132,6 @@
                         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                         <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                     </form>
-                    Please enter your contact email address upon checkout.
                 </center>
             </div>
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
@@ -146,7 +145,6 @@
                         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                         <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                     </form>
-                    Please enter your contact email address upon checkout.
                 </center>
             </div>
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
@@ -160,7 +158,6 @@
                         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                         <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                     </form>
-                    Please enter your contact email address upon checkout.
                 </center>
             </div>
         </div>
@@ -219,7 +216,6 @@
                         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                         <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                     </form>
-                    Please enter your contact email address upon checkout.
                 </center>
             </div>
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
@@ -239,7 +235,6 @@
                         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                         <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                     </form>                      
-                    Please enter your contact email address upon checkout.
                 </center>
             </div>
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
@@ -261,7 +256,112 @@
                         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                         <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                     </form>
-                    Please enter your contact email address upon checkout.
+                </center>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="section" style="padding-top: 3rem;">
+    <div class="container">
+        <div class="row">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <div class="row">
+                    <div class="column">
+                        <img src="" style="height: 150px;" />
+                    </div>
+                </div>
+                <h5 style="margin: 0;">Tees</h5>
+                <p style="font-size: large">$15</p>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <div class="row">
+                    <div class="column">
+                        <img src="" style="height: 85px;" />
+                    </div>
+                </div>
+                <h5 style="margin: 0;">Hoodie</h5>
+                <p style="font-size: large">$30</p>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <div class="row">
+                    <div class="column">
+                        <img src="" style="height: 150px;" />
+                    </div>
+                </div>
+                <h5 style="margin: 0;">Long sleve</h5>
+                <p style="font-size: large">$25</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="H2T5CFUV294TW">
+                        <table>
+                        <tr><td><input type="hidden" name="on0" value="Color/Size">Color/Size</td></tr><tr><td><select name="os0">
+                            <option value="S - Sport Grey">S - Sport Grey $15.00 USD</option>
+                            <option value="M - Sport Grey">M - Sport Grey $15.00 USD</option>
+                            <option value="L - Sport Grey">L - Sport Grey $15.00 USD</option>
+                            <option value="XL - Sport Grey">XL - Sport Grey $15.00 USD</option>
+                            <option value="XXL - Sport Grey">XXL - Sport Grey $15.00 USD</option>
+                            <option value="S - Antique Cherry">S - Antique Cherry $15.00 USD</option>
+                            <option value="M - Antique Cherry">M - Antique Cherry $15.00 USD</option>
+                            <option value="L - Antique Cherry">L - Antique Cherry $15.00 USD</option>
+                            <option value="XL - Antique Cherry">XL - Antique Cherry $15.00 USD</option>
+                            <option value="XXL - Antique Cherry">XXL - Antique Cherry $15.00 USD</option>
+                        </select> </td></tr>
+                        <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
+                        </table>
+                        <input type="hidden" name="currency_code" value="USD">
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>
+                </center>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="AVG8PDC2CC5D6">
+                        <table>
+                        <tr><td><input type="hidden" name="on0" value="Size">Size</td></tr><tr><td><select name="os0">
+                            <option value="S">S $30.00 USD</option>
+                            <option value="M">M $30.00 USD</option>
+                            <option value="L">L $30.00 USD</option>
+                            <option value="XL">XL $30.00 USD</option>
+                            <option value="XXL">XXL $30.00 USD</option>
+                        </select> </td></tr>
+                        <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
+                        </table>
+                        <input type="hidden" name="currency_code" value="USD">
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>
+                </center>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="Q6V9AVMVXDVSN">
+                        <table>
+                        <tr><td><input type="hidden" name="on0" value="Size">Size</td></tr><tr><td><select name="os0">
+                            <option value="S">S $25.00 USD</option>
+                            <option value="M">M $25.00 USD</option>
+                            <option value="L">L $25.00 USD</option>
+                            <option value="XL">XL $25.00 USD</option>
+                            <option value="XXL">XXL $25.00 USD</option>
+                        </select> </td></tr>
+                        <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
+                        </table>
+                        <input type="hidden" name="currency_code" value="USD">
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>
                 </center>
             </div>
         </div>
