--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row">
                     <div class="column">
-                        <img src="img/tumbler.png" style="height: 150px;" />
+                        <img src="img/2022 tee.jpg" style="height: 150px;" />
                     </div>
                 </div>
-                <h5 style="margin: 0;">Tumbler</h5>
-                <p style="font-size: large">$15</p>
+                <h5 style="margin: 0; font-size: 2.1rem;">👉 CLASS OF 2022 T-Shirt 👈</h5>
+                <p style="font-size: large">$10</p>
             </div>
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row">
@@ -125,10 +125,18 @@
                 <center>
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                         <input type="hidden" name="cmd" value="_s-xclick">
-                        <input type="hidden" name="hosted_button_id" value="4FT6AGGRUBF8N">
+                        <input type="hidden" name="hosted_button_id" value="5TNJZNCEG38A2">
                         <table>
-                        <tr><td><input type="hidden" name="on0" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os0" maxlength="200"></td></tr>
+                        <tr><td><input type="hidden" name="on0" value="Size">Size</td></tr><tr><td><select name="os0">
+                            <option value="S">S $10.00 USD</option>
+                            <option value="M">M $10.00 USD</option>
+                            <option value="L">L $10.00 USD</option>
+                            <option value="XL">XL $10.00 USD</option>
+                            <option value="XXL">XXL $10.00 USD</option>
+                        </select> </td></tr>
+                        <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
                         </table>
+                        <input type="hidden" name="currency_code" value="USD">
                         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                         <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                     </form>
@@ -170,6 +178,15 @@
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row">
                     <div class="column">
+                        <img src="img/tumbler.png" style="height: 150px;" />
+                    </div>
+                </div>
+                <h5 style="margin: 0;">Tumbler</h5>
+                <p style="font-size: large">$15</p>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <div class="row">
+                    <div class="column">
                         <img src="img/Magnet (1).JPG" style="height: 150px;" />
                     </div>
                 </div>
@@ -193,18 +210,22 @@
                 <h5 style="margin: 0;">Hats</h5>
                 <p style="font-size: large">$20</p>
             </div>
-            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
-                <div class="row">
-                    <div class="column">
-                        <img src="img/2022 tee.jpg" style="height: 150px;" />
-                    </div>
-                </div>
-                <h5 style="margin: 0;">T-shirt</h5>
-                <p style="font-size: large">$10</p>
-            </div>
         </div>
 
         <div class="row">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="4FT6AGGRUBF8N">
+                        <table>
+                        <tr><td><input type="hidden" name="on0" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os0" maxlength="200"></td></tr>
+                        </table>
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>
+                </center>
+            </div>
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <center>
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
@@ -235,27 +256,6 @@
                         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                         <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                     </form>                      
-                </center>
-            </div>
-            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
-                <center>
-                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
-                        <input type="hidden" name="cmd" value="_s-xclick">
-                        <input type="hidden" name="hosted_button_id" value="5TNJZNCEG38A2">
-                        <table>
-                        <tr><td><input type="hidden" name="on0" value="Size">Size</td></tr><tr><td><select name="os0">
-                            <option value="S">S $10.00 USD</option>
-                            <option value="M">M $10.00 USD</option>
-                            <option value="L">L $10.00 USD</option>
-                            <option value="XL">XL $10.00 USD</option>
-                            <option value="XXL">XXL $10.00 USD</option>
-                        </select> </td></tr>
-                        <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
-                        </table>
-                        <input type="hidden" name="currency_code" value="USD">
-                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                    </form>
                 </center>
             </div>
         </div>
@@ -378,7 +378,7 @@
 </div>
 
 <center>
-    <p>We will be doing a COVID-safe pickup.  Stay tuned for further instructions to your order email.</p>
+    <p>We will be doing a COVID-safe pickup.  Instructions will be sent to your email.</p>
     <h4>All sales are final.  There are no exchanges or refunds.</h4>
     <p style="font-size: 10px;">This is not an official TESD website. It is organized by Conestoga parents</p>
 </center>
