--- a/index.html
+++ b/index.html
@@ -99,11 +99,12 @@
                     </div>
                 </div>
                 <h5 style="margin: 0; font-size: 2.1rem;">👉 CLASS OF 2022 T-Shirt 👈</h5>
+                <p style="font-size: x-small">(Gildan Softstyle® T-Shirt)</p>
                 <p style="font-size: large">$10</p>
             </div>
         </div>
         <div class="row">
-            <div class="column" >
+            <div class="column">
                 <center>
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                         <input type="hidden" name="cmd" value="_s-xclick">
@@ -138,6 +139,7 @@
                     </div>
                 </div>
                 <h5 style="margin: 0;">Lanyard</h5>
+                <p style="font-size: x-small">(3/4" woven polyester)</p>
                 <p style="font-size: large">$5</p>
             </div>
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
@@ -147,6 +149,7 @@
                     </div>
                 </div>
                 <h5 style="margin: 0;">Stadium Seat</h5>
+                <p style="font-size: x-small">(Port Authority 600 denier polyester)</p>
                 <p style="font-size: large">$30</p>
             </div>
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
@@ -156,6 +159,7 @@
                     </div>
                 </div>
                 <h5 style="margin: 0;">Tumbler</h5>
+                <p style="font-size: x-small">(The Ally - 18 oz Stainless Steel Straight Wall Tumbler)</p>
                 <p style="font-size: large">$15</p>
             </div>
         </div>
@@ -240,6 +244,7 @@
                     </div>
                 </div>
                 <h5 style="margin: 0;">Tees</h5>
+                <p style="font-size: x-small">(Gildan Softstyle® T-Shirt)</p>
                 <p style="font-size: large">$15</p>
             </div>
         </div>
@@ -318,6 +323,7 @@
                     </div>
                 </div>
                 <h5 style="margin: 0;">Hoodie</h5>
+                <p style="font-size: x-small">(District ® Featherweight French Terry™ Hoodie)</p>
                 <p style="font-size: large">$30</p>
             </div>
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
@@ -327,6 +333,7 @@
                     </div>
                 </div>
                 <h5 style="margin: 0;">Long sleve</h5>
+                <p style="font-size: x-small">(Sport-Tek® Long Sleeve Heather Contender™ Tee)</p>
                 <p style="font-size: large">$25</p>
             </div>
         </div>
