--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
     <a href="mailto:stogawear@gmail.com" style="position: absolute;top: 16px;right: 16px;">stogawear@gmail.com</a>
     <br/>
     <img src="img/Grey C logo.jpg" style="height: 150px;" />
-    <h4 class="hero-heading" style="color: white; margin-bottom: 0;">Conestoga Spiritwear</h4>
-    <p style="color: white; margin-top: 0;">All proceeds to benefit Class of 2022, Class of 2023 and T&E Care</p>
+    <h4 class="hero-heading" style="color: white;">Conestoga Spiritwear</h4>
+    <p style="color: white; margin-top: 0; margin-bottom: 0;">All proceeds to benefit Class of 2022, Class of 2023 and T&E Care</p>
+    <p style="color: white; margin-top: 0;">*while supplies last</p>
 </div>
 
 <div class="section" style="padding-top: 2rem;">
-    <h5>Conestoga products that we will be selling until inventory runs out.</h5>
     <div class="container">
         <div class="row">
             <div class="column">
